--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,5 +1,8 @@
 <div class="room-container">
-<div class="room-bar"></div>
-<div class="room-main"></div>
-<div class="room-form"></div>
+  <div class="room-bar">
+    <div class="current-room">hogefuga</div>
+    <div class="quit-room"><a href="#">チャットを終了する</a></div>
+  </div>
+  <div class="room-main"></div>
+  <div class="room-form"></div>
 </div>
