--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -3,21 +3,19 @@
     <div class="user-name">
       <a href="#">Tom</a>
     </div>
-    <div class="btn room-create">
+    <div class="create-room">
       <a href="#">チャットを作成する</a>
     </div>
   </div>
   <div class="side-bar-bottom">
-    <div class="room-list">
-      <div class="room">
-        <div class="room-name">
-          <a href="#">room1</a>
-        </div>
+    <div class="room">
+      <div class="room-name">
+        <a href="#">room1</a>
       </div>
-      <div class="room">
-        <div class="room-name">
-          <a href="#">room2</a>
-        </div>
+    </div>
+    <div class="room">
+      <div class="room-name">
+        <a href="#">room2</a>
       </div>
     </div>
   </div>
