--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -74,7 +74,6 @@ a{
 
 .room-main {
   background-color: #fafafa;
-  margin-top: 46px;
   height: calc(100vh - 100px - 90px);
   padding: 0 40px;
 }
@@ -83,6 +82,7 @@ a{
   background-color: #ddd;
   height: 90px;
   padding: 20px 40px;
+  display: flex;
 }
 
 .current-room {
@@ -98,4 +98,71 @@ a{
 .quit-room a{
   border: 1px solid darkred;
   padding: 20px;
+}
+
+.post-date {
+  display: inline;
+  color: #999;
+  font-size: 12px;
+  margin-left: 10px;
+  margin-top: 10px;
+}
+
+.post-name {
+  font-size: 16px;
+  color: #434a54;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+.post-content {
+  font-size: 14px;
+  color: #434a54;
+}
+
+.posts {
+  overflow: scroll;
+}
+
+.post {
+  margin-bottom: 40px;
+  margin-top: 46px;
+}
+
+.post-form input{
+  padding: 0 10px;
+  width: 100%;
+  height: 50px;
+  border-style: none;
+}
+
+.post-form {
+  width: 100%;
+  display: flex;
+  background-color: #fff;
+}
+
+.send-btn input{
+ height: 50px;
+ line-height: 50px;
+ padding: 0 20px;
+ background-color: #38aef0;
+ color: #fff;
+ font-size: 16px; 
+ margin-left: 15px;
+ border: none;
+}
+
+.form-image {
+  font-size: 12px;
+  background-color: lightblue;
+  color: white;
+  padding: 12px;
+  width: 60px;
+  margin: 5px 10px;
+  text-align: center;
+}
+
+.hidden {
+  display: none;
 }
