--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -1,7 +1,7 @@
 <div class="side-bar">
   <div class="side-bar-top">
     <div class="user-name">
-      <a href="#">Tom</a>
+      <%= link_to current_user.name, edit_user_path(current_user) %>
     </div>
     <div class="create-room">
       <a href="#">チャットを作成する</a>
