--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -4,19 +4,16 @@
       <%= link_to current_user.name, edit_user_path(current_user) %>
     </div>
     <div class="create-room">
-      <a href="#">チャットを作成する</a>
+      <%= link_to "チャットを作成する", new_room_path %>
     </div>
   </div>
   <div class="side-bar-bottom">
-    <div class="room">
-      <div class="room-name">
-        <a href="#">room1</a>
+    <% @rooms.each do |room|%>
+      <div class="room">
+        <div class="room-name">
+            <%= link_to room.name, '#' %>
+        </div>
       </div>
-    </div>
-    <div class="room">
-      <div class="room-name">
-        <a href="#">room2</a>
-      </div>
-    </div>
+    <% end %>
   </div>
 </div>
