--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -8,7 +8,7 @@
     </div>
   </div>
   <div class="side-bar-bottom">
-    <% @rooms.each do |room|%>
+    <% current_user.rooms.each do |room|%>
       <div class="room">
         <div class="room-name">
             <%= link_to room.name, '#' %>
