--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,6 +1,6 @@
 <div class="room-container">
   <div class="room-bar">
-    <div class="current-room">hogefuga</div>
+    <div class="current-room"><%= @room.name %></div>
     <div class="quit-room"><a href="#">チャットを終了する</a></div>
   </div>
   <div class="room-main">
