--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,7 +1,7 @@
 <div class="room-container">
   <div class="room-bar">
     <div class="current-room"><%= @room.name %></div>
-    <div class="quit-room"><a href="#">チャットを終了する</a></div>
+    <div class="quit-room"><%= link_to 'チャットを終了する', room_path(@room), method: :delete %></div>
   </div>
   <div class="room-main">
     <div class="posts">
