--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -76,6 +76,7 @@ a{
   background-color: #fafafa;
   height: calc(100vh - 100px - 90px);
   padding: 0 40px;
+  overflow: scroll;
 }
 
 .current-room {
@@ -93,8 +94,11 @@ a{
   padding: 20px;
 }
 
+.upper-post {
+  display: flex;
+}
+
 .post-date {
-  display: inline;
   color: #999;
   font-size: 12px;
   margin-left: 10px;
@@ -111,10 +115,6 @@ a{
 .post-content {
   font-size: 14px;
   color: #434a54;
-}
-
-.posts {
-  overflow: scroll;
 }
 
 .post {
