--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,6 +1,12 @@
 <div class="post">
-  <div class="post-name"><%= message.user.name %>
+  <div class="upper-post">
+    <div class="post-name"><%= message.user.name %></div>
     <div class="post-date"><%= l message.created_at %></div>
   </div>
-  <div class="post-content"><%= message.content %></div>
+  <div class="lower-post">
+    <div class="post-content">
+      <%= message.content %>
+    </div>
+    <%= image_tag message.image.variant(resize: '500x500'), class: 'message-image' if message.image.attached? %>
+  </div>
 </div>
