各モデルのテスト

--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,7 +1,7 @@
 <div class="post">
   <div class="upper-post">
     <div class="post-name"><%= message.user.name %></div>
-    <div class="post-date"><%= l message.created_at %></div>
+    <div class="post-date"><%= message.created_at %></div>
   </div>
   <div class="lower-post">
     <div class="post-content">
